[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snncutoff"
version = "0.0.0"
description = ""
readme  = { file = ".github/readme.md", content-type="text/markdown" }
authors = [
  { name = "Dengyu Wu" },
  { name = "Minghong Xu" },
]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]

requires-python = ">=3.9"
dependencies = [
  "numpy",
  "torch",
  "tqdm",
]
optional-dependencies.tests = [
]
optional-dependencies.docs = [
  "sphinx",
  "sphinx-book-theme",
  "myst-parser",
]
optional-dependencies.dev = [
  "snncutoff[tests,docs]",
  "build",
  "twine",
]
